# solochain-template

./: Cargo.toml  README.md  spec.json  spin.toml  test.md
crates/spin/: Cargo.toml
crates/spin-primitives/: Cargo.toml
crates/spin-primitives/src/: digests.rs  inherents.rs  lib.rs
crates/spin/src/: import_queue.rs  lib.rs  standalone.rs
env-setup/: rust-toolchain.toml
node/: Cargo.toml
node/src/: benchmarking.rs  service.rs
pallets/membership/: Cargo.toml  README.md
pallets/membership/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  aura_session.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs
sudoku/: README.md
sudoku/src/: main.rs
